# gerd-dx-app

./: app.py  classic_erosive.json  pyproject.toml  requirements.txt  result.json  test_cli.py  test_combinations_flagged.py  test_conflicts_and_insufficiency.py  test_gastroparesis_driven.py  test_management_layer.py  test_ranking_tiebreaker.py  test_reflux_hypersensitivity.py
src/gerd_dx/: __init__.py  cli.py  conflicts.py  engine.py  enums.py  models.py  reasoning.py
src/gerd_dx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gerd_dx/rules/: __init__.py  management.py  management.yaml  mechanisms.py  thresholds.yaml
tests/: test_achalasia_masquerade.py  test_classic_erosive.py  test_eoe_masquerade.py  test_functional_heartburn.py  test_hiatal_hernia_dominant.py  test_iem_plus_gerd.py  test_indeterminate.py  test_non_acid_reflux_on_ppi.py  test_post_surgical.py
